--- a/board/WebContent/boardForm.html
+++ b/board/WebContent/boardForm.html
@@ -47,16 +47,16 @@
 			<caption>글쓰기</caption>
 			</thead>
 			<tbody>
-				<form action="./MasterController" method="post">
+				<form action="./write" method="post">
 					<tr>
 						<th>제목:</th>
 						<td><input type="text" placeholder="제목을 입력하세요. " name="title"
-							class="form-control" /></td>
+							class="form-control" required/></td>
 					</tr>
 				<tr>
 					<th>내용:</th>
 					<td><textarea rows=15 cols="10" height="50ps" placeholder="내용을 입력하세요. "
-							name="contents" class="form-control"></textarea></td>
+							name="contents" class="form-control" required></textarea></td>
 				</tr>
 				<tr>
 					<td colspan="2"><input type="submit" value="등록"
