--- a/boardProject/WebContent/sign_up.html
+++ b/boardProject/WebContent/sign_up.html
@@ -13,100 +13,14 @@
 	src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 <script
 	src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-<style type="text/css">
-body {
-	color: #999;
-	background: #f3f3f3;
-	font-family: 'Roboto', sans-serif;
-}
-
-.form-control {
-	border-color: #eee;
-	min-height: 41px;
-	box-shadow: none !important;
-}
-
-.form-control:focus {
-	border-color: #5cd3b4;
-}
-
-.form-control, .btn {
-	border-radius: 3px;
-}
-
-.signup-form {
-	width: 500px;
-	margin: 0 auto;
-	padding: 30px 0;
-}
-
-.signup-form h2 {
-	color: #333;
-	margin: 0 0 30px 0;
-	display: inline-block;
-	padding: 0 30px 10px 0;
-	border-bottom: 3px solid #5cd3b4;
-}
-
-.signup-form form {
-	color: #999;
-	border-radius: 3px;
-	margin-bottom: 15px;
-	background: #fff;
-	box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
-	padding: 30px;
-}
-
-.signup-form .form-group {
-	margin-bottom: 20px;
-}
-
-.signup-form label {
-	font-weight: normal;
-	font-size: 13px;
-}
-
-.signup-form input[type="checkbox"] {
-	margin-top: 2px;
-}
-
-.signup-form .btn {
-	font-size: 16px;
-	font-weight: bold;
-	background: #5cd3b4;
-	border: none;
-	margin-top: 20px;
-	min-width: 140px;
-}
-
-.signup-form .btn:hover, .signup-form .btn:focus {
-	background: #41cba9;
-	outline: none !important;
-}
-
-.signup-form a {
-	color: #5cd3b4;
-	text-decoration: underline;
-}
-
-.signup-form a:hover {
-	text-decoration: none;
-}
-
-.signup-form form a {
-	color: #5cd3b4;
-	text-decoration: none;
-}
-
-.signup-form form a:hover {
-	text-decoration: underline;
-}
-</style>
+<link rel="stylesheet" href="./css/sign_up.css" type="text/css">
 </head>
 <body>
+
+
 	<div class="signup-form">
-		<form action="./SignUpController" method="post"
-			class="form-horizontal">
+		<form onsubmit="return isCheck()" action="./SignUpController"
+			method="post" class="form-horizontal">
 			<div class="col-xs-8 col-xs-offset-4">
 				<h2>Sign Up</h2>
 			</div>
@@ -115,6 +29,7 @@ body {
 				<div class="col-xs-8">
 					<input type="text" class="form-control" name="id"
 						required="required">
+					<button id="start_ajax">중복 체크</button>
 				</div>
 			</div>
 			<div class="form-group">
@@ -135,11 +50,12 @@ body {
 				<div class="col-xs-8 col-xs-offset-4">
 					<p>
 						<label class="checkbox-inline"><input type="checkbox"
-							required="required"> I accept the <a href="#">Terms
-								of Use</a> &amp; <a href="#">Privacy Policy</a>.</label>
+							required="required"> I accept the Privacy Policy.</label>
 					</p>
-					<button type="submit" class="btn btn-primary btn-lg">Sign
-						Up</button>
+					<input type="submit" class="btn btn-primary btn-lg"
+						value="Sign
+						Up" /> <input type="hidden" name="type"
+						value="signUp">
 				</div>
 			</div>
 		</form>
@@ -147,5 +63,54 @@ body {
 			Already have an account? <a href="./index.html">Login here</a>
 		</div>
 	</div>
+
+	<script>
+		/* 전역 변수 중복 체크 변수  */
+		var check = "fail";
+		function isCheck() {
+
+			if (check === "success") {
+
+				var standard = /^[a-z0-9]{6,15}$/g;
+				if (!standard.test($("input[name=id]").val())) {
+					alert("아이디는 6~15자 영문자 또는 숫자이어야 합니다.");
+					location.reload();
+					return false;
+				}
+
+				if ($("input[name=password]").val() !== $(
+						"input[name=confirm_password]").val()) {
+					alert("비밀번호와 비밀번호 확인이 다릅니다.");
+					location.reload();
+					return false;
+				}
+
+				alert("회원가입 완료");
+				return true;
+			} else {
+				alert("중복 체크를 하세요.");
+				return false;
+			}
+		}
+
+		$("#start_ajax").click(function() {
+			$.ajax({
+				type : "POST",
+				url : "./SignUpController",
+				data : {
+					type : "check",
+					id : $("input[name=id]").val()
+				},
+				dataType : "json",
+				success : function(data) {
+					alert(data.result);
+					check = data.result;
+				},
+				error : function(xhr, status, error) {
+					alert(error);
+				}
+			});
+		});
+	</script>
 </body>
 </html>
